--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <font face="monospace">
-<body bgcolor="black">
+<body bgcolor="white">
 
 <title>
 SNIFFER TRAP
@@ -10,7 +10,7 @@ SNIFFER TRAP
 
 
 <center>
-<font color="FFFFF">
+<font color="000000">
 <font size="20">
 70834
 </font>
