--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <center>
 <font color="DAD1CC">
 <font size="20">
-70834<br>
-<img src="/noseguard.jpg"><br>
+<img src="/noseguard.gif"><br>
 </font>
 </center>
 </html>
