--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 5niffer 7rap
 </title>
 
-
+ <script type="text/javascript">
+ 	alert("This is an alert box!");
+ </script>
+ 
 <center>
 <font color="DAD1CC">
 <font size="20">
