--- a/7357.html
+++ b/7357.html
@@ -13,7 +13,7 @@
 <font color="DAD1CC">
 <font size="20"> 
 -->
-<img src="/noseguard.gif"><br>
+<img src="/trap_01.jpg"><br>
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
