--- a/7357.html
+++ b/7357.html
@@ -14,7 +14,7 @@
 <font size="20"> 
 -->
 <img src="/5niffer7rapcom.gif"><br>
-<img src="/trap_01.jpg"><br>
+<img src="/trap_01.jpg" alt="70834 TRAP 001" width="300" height="400">
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
