--- a/7357.html
+++ b/7357.html
@@ -14,7 +14,7 @@
 <font size="20"> 
 -->
 <img src="/5niffer7rapcom.gif"><br>
-<img src="/trap_01.jpg" alt="70834 TRAP 001" width="300" height="400"><br>
+<img src="/noseguard_buynow.gif" alt="70834 TRAP 001" width="426" height="448"><br>
 Drop 1.<br>
 $20<br>
 
